--- a/notes-clone/package.json
+++ b/notes-clone/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "date-and-time": "^2.4.2",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "nanoid": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-mde": "^11.5.0",
     "react-scripts": "5.0.1",
     "react-split": "^2.0.14",
